Fix welcome area alignment

--- a/style.css
+++ b/style.css
@@ -152,7 +152,7 @@ header {
 }
 
 .welcome {
-	align-items: end;
+	align-items: start;
 	gap: 1rem;
 }
 
@@ -160,16 +160,12 @@ header {
 	height: 48px;
 }
 
-.welcome h2 {
-	font-size: 1.2rem;
-	position: relative;
+.welcome p {
+	font-size: .75rem;
 }
 
-.welcome h2::before {
-	content: 'Hi there,';
-	font-size: .75rem;
-	position: absolute;
-	bottom: 1.75rem;
+.welcome h2 {
+	font-size: 1.2rem;
 }
 
 .buttons {
